--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,8 @@
 - when game created but not started
     - waiting message in PlayerView after joined
     - joined player names big and nice in HostView
-    - HostView room code bigger
 - clue page
-    - dollar value and category
+    - category
     - more contrast in color on timer
 - grading page
     - tell player they did shadow
@@ -12,4 +11,4 @@
 - implement final jeopardy flow
 - do things in app.py that depend on prod vs dev
 - be able to leave room from any screen in host view
-- hide scribbly (do later)
+
